# libutils

./: .gitignore  .gitignore~  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile~  bashsettings.text  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
old/: utils-rototrans.cpp  utils-vecalg.cpp  vars.mk
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  atomsystem-box.cpp  atomsystem-box.cppinc  atomsystem-dist.cpp  atomsystem-dist.cppinc  atomsystem-frame.cpp  atomsystem-frame.cppinc  atomsystem-nbor.cpp  atomsystem-nbor.cppinc  atomsystem-nbor.cppinc~  atomsystem.cpp  atomsystem.hpp  bond-data.cpp~  bond-data.hpp~  bond.cpp  bond.cpp~  bond.hpp  bond.hpp~  chisq-basics.hpp  chisq-basics.hpp~  chisq-notes.text  constants.hpp  exiterrors.cpp  exiterrors.hpp  funcfit-basics.cpp  funcfit-basics.hpp  funcfit-beecolony.hpp  funcfit-conjgrad.hpp  funcfit-conjgrad.hpp~  funcfit-deriv.hpp  funcfit-deriv.hpp~  funcfit-diffevol.hpp  funcfit-errors.hpp  funcfit-exceptions.hpp  funcfit-gauss-newton.hpp  funcfit-gravsearch.hpp  funcfit-leve-marq.hpp  (+48 more)
src/.deps/: libutils_a-atomsystem-box.Po  libutils_a-atomsystem-dist.Po  libutils_a-atomsystem-frame.Po  libutils_a-atomsystem-nbor.Po  libutils_a-atomsystem.Po  libutils_a-bond-data.Po  libutils_a-bond.Po  libutils_a-funcfit-basics.Po  libutils_a-mtwister.Po  libutils_a-omp-basics.Po  libutils_a-param.Po  libutils_a-utils-errors.Po  libutils_a-utils-rototrans.Po  libutils_a-utils-streamio.Po  libutils_a-utils-string.Po  libutils_a-utils-vecalg.Po  libutils_la-atomsystem-box.Plo  libutils_la-atomsystem-dist.Plo  libutils_la-atomsystem-frame.Plo  libutils_la-atomsystem-nbor.Plo  libutils_la-atomsystem.Plo  libutils_la-bond-data.Plo  libutils_la-bond.Plo  libutils_la-funcfit-basics.Plo  libutils_la-mtwister.Plo  libutils_la-omp-basics.Plo  libutils_la-param.Plo  libutils_la-utils-errors.Plo  libutils_la-utils-rototrans.Plo  libutils_la-utils-streamio.Plo  libutils_la-utils-string.Plo  libutils_la-utils-vecalg.Plo
tests/: a.out  test-cholesky-002.cpp  test-cholesky-002.cpp~
